minor correction to fix aligning height of topic content with navigation

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/navigation2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/navigation2.less
@@ -7,7 +7,7 @@
   .cmp-navigation {
   	padding-left:0;
 	overflow: auto;
-	max-height:55vh;
+	max-height:53vh;
   }
   .cmp-navigation__col-icon {
     display: none;
